--- a/start_organisation/templates/start-done.html
+++ b/start_organisation/templates/start-done.html
@@ -16,7 +16,7 @@
           <h2>&#10003; Done</h2>
           <p>
             Your organisation is now visible on the public register and you will
-            be able to sign in an manage it.
+            be able to sign in and manage it.
           </p>
       </div>
 
