--- a/start_organisation/templates/start-invite.html
+++ b/start_organisation/templates/start-invite.html
@@ -7,7 +7,7 @@
       <form action="" method="post">
         {{ render_field(form.user_is_director) }}
         {{ render_field(form.director_count, type='number') }}
-        <div id="director_contact">
+        <div id="director_contact" class="hide">
           {% for person in form.people %}
               {{person}}
           {% endfor %}
@@ -17,7 +17,7 @@
           {{ render_field(form.method) }}
 
         </div>
-        <button type="submit" class="btn  btn-default btn-lg">Next step</button>
+        <button type="submit" class="button expand">Next</button>
       </form>
     </div>
   </div>
