--- a/start_organisation/templates/start-review.html
+++ b/start_organisation/templates/start-review.html
@@ -4,13 +4,11 @@
   <div class="row">
     <div class="small-12 columns">
      <h2>Review details</h2>
-     <div class="panel ">
-       <h5>Warning</h5> 
-       <p>It is an offence to provide information which you know to be incorrect.</p>
+     <div class="panel">
+        <i class="fa fa-bookmark fa-4x"></i>
+       <h5>{{order.name}}</h5> 
        <hr/>
        <dl>
-         <dt>Name</dt>
-         <dd>{{order.name}}</dd>
          <dt>Organisation type</dt>
          <dd>{{order.organisation_type.replace('-',' ')}}</dd>
          <dt>Activities</dt>
