--- a/start_organisation/templates/base_service.html
+++ b/start_organisation/templates/base_service.html
@@ -58,7 +58,12 @@
         <a class="exit-off-canvas"></a>
         <aside class="right-off-canvas-menu"> 
           <ul class="off-canvas-list"> 
-          <li><a href="#"><span class="round alert label">5</span> Notifications</a></li>
+          <li><a href="#"><span class="round alert label">5</span> To do list</a></li>
+          <li><a href="#"><i class="fa fa-pencil-square-o"></i>
+ Report a change</a></li>
+          <li><a href="#"><i class="fa fa-envelope-o"></i>
+
+ Notification settings</a></li>
         </ul> 
       </aside> 
 
