--- a/start_organisation/templates/base_transaction.html
+++ b/start_organisation/templates/base_transaction.html
@@ -4,7 +4,7 @@
 {% block content %}
   <div class="header service">
     <nav class="top-bar" data-topbar>
-      <h1><a href="/">Start an organisation</a></h1>
+      <h1><a href="/" class="iglogo">IG</a> <a href="/">Start an organisation</a></h1>
     </nav>
   </div>
   {% with messages = get_flashed_messages(with_categories=true) %}
