--- a/start_organisation/templates/base_service.html
+++ b/start_organisation/templates/base_service.html
@@ -7,7 +7,7 @@
           <a class="left-off-canvas-toggle" href="#"><i class="fa fa-info-circle"></i></a> 
         </section> 
         <section class="middle tab-bar-section">
-          <h1 class="title"><a href="/">{% block service_title %}{% endblock%}</a></h1>
+          <h1 class="title"><a href="/" class="iglogo">IG</a> <a href="/">{% block service_title %}{% endblock%}</a></h1>
         </section>
         <section class="right-small">
           <a class="right-off-canvas-toggle menu-icon" href="#">
