Start of saving director details on org creation

--- a/start_organisation/templates/start-register.html
+++ b/start_organisation/templates/start-register.html
@@ -15,7 +15,7 @@
           {{render_checkbox(form.register_employer)}}
         </p>
         <p class="hint">
-           This includes if you’re employing yourself eg as the only director of a limited company.
+           This includes if you’re employing yourself e.g. as the only director of a limited company.
         </p>
         <p>
           {{render_checkbox(form.register_construction)}}
@@ -28,7 +28,7 @@
         <ul class="verified-facts">
           <li>
             <span>&#10003;</span>
-            Your organisation will be registered for <a href="#">Corperation tax</a>
+            Your organisation will be registered for <a href="#">Corporation tax</a>
           </li>
           <li>
             <span>&#10003;</span>
@@ -43,7 +43,7 @@
         <hr/>
         <h2>Licences</h2>
         <p>
-          Once your organisation has been created, you will immediatly able to
+          Once your organisation has been created, you will immediately able to
           apply for licences.
         </p>
         <button type="submit" class="button expand">Next</button>
