--- a/start_organisation/templates/start-type.html
+++ b/start_organisation/templates/start-type.html
@@ -6,7 +6,7 @@
       <ul class="verified-facts">
         <li>
           <span>&#10003;</span>
-          Banckrupy check complete
+          Bankruptcy check complete
         </li>
       </ul>
      <h3>Choose a type of organisation</h3>
