--- a/start_organisation/templates/manage.html
+++ b/start_organisation/templates/manage.html
@@ -23,12 +23,9 @@
 
       <h3>Directors and officers <a href="#" class="button tiny right">Ammend</a></h3>
       <ul>
-        <li>
-          Karen Smith &mdash; Director
-        </li>
-        <li>
-          Simon Calver &mdash; Director
-        </li>
+          {% for director in organisation.directors %}
+          <li>{{ director }} &mdash; Director</li>
+        {% endfor %}
       </ul>
 
       <hr/>
