Capture registrations details

--- a/start_organisation/templates/start-review.html
+++ b/start_organisation/templates/start-review.html
@@ -13,6 +13,20 @@
          <dd>{{order.organisation_type.replace('-',' ')}}</dd>
          <dt>Activities</dt>
          <dd>{{order.activities}}</dd>
+
+         {% if order.register_data or order.register_employer or order.register_construction %}
+          <dt>Registrations</dt>
+           {% if order.register_data %}
+              <dd>Data Protection</dd>
+           {% endif %}
+           {% if order.register_employer %}
+              <dd>Employent &amp; PAYE</dd>
+           {% endif %}
+           {% if order.register_construction %}
+              <dd>Payment of subcontractors for construction work</dd>
+           {% endif %}
+         {% endif %}
+
        </dl>
      </div>
      <form action="" method="post">
