add register for data protection etc

--- a/start_organisation/templates/start-done.html
+++ b/start_organisation/templates/start-done.html
@@ -3,11 +3,11 @@
 {% block transaction_content %}
   <div class="row">
     <div class="small-12 columns">
-      
+
       <div id="done-pending" class="done panel">
           <h2>Pending</h2>
           <p>
-            Your application is pending untill the other directors have verified.
+            Your application is pending until the other directors have verified.
             This page will automatically update.
           </p>
       </div>
