--- a/start_organisation/templates/manage.html
+++ b/start_organisation/templates/manage.html
@@ -21,7 +21,7 @@
 
       <hr/>
 
-      <h3>Directors and officers <a href="#" class="button tiny right">Ammend</a></h3>
+      <h3>Directors and officers <a href="#" class="button tiny right">Amend</a></h3>
       <ul>
           {% for director in organisation.directors %}
           <li>{{ director }} &mdash; Director</li>
@@ -30,7 +30,7 @@
 
       <hr/>
 
-      <h3>Registered address <a href="#" class="right button tiny">Ammend</a></h3>
+      <h3>Registered address <a href="#" class="right button tiny">Amend</a></h3>
       <p>
         Transworld House, 100 City Road, London, EC1Y 2BP
       </p>
