skeleton licence applicaiton

--- a/start_organisation/templates/manage.html
+++ b/start_organisation/templates/manage.html
@@ -34,6 +34,9 @@
       <p>
         Transworld House, 100 City Road, London, EC1Y 2BP
       </p>
+      <p>
+        <a class="button expand" href="{{url_for('licence_apply_type', organisation_id=organisation.uri.split('/')[-1])}}">Apply for a licence</a>
+      </p>
     </div>
   </div>
 {% endblock %}
