--- a/start_organisation/templates/base_service.html
+++ b/start_organisation/templates/base_service.html
@@ -4,10 +4,12 @@
     <div class="inner-wrap">
       <nav class="tab-bar">
         <section class="left-small">
-          <a class="left-off-canvas-toggle" href="#"><i class="fa fa-info-circle"></i></a>
+          <a class="left-off-canvas-toggle" href="#">
+            <img id="header_crown" src="{{config.WWW_BASE_URL + '/static/images/crown_white.png'}}"/>
+          </a>
         </section> 
         <section class="middle tab-bar-section">
-          <h1 class="title"><a href="/" class="iglogo">IG</a> <a href="/">{% block service_title %}{% endblock%}</a></h1>
+          <h1 class="title"><a href="/">{% block service_title %}{% endblock%}</a></h1>
         </section>
         <section class="right-small">
           <a class="right-off-canvas-toggle menu-icon" href="#">
