--- a/start_organisation/templates/start-type.html
+++ b/start_organisation/templates/start-type.html
@@ -11,7 +11,7 @@
       </ul>
      <h3>Choose a type of organisation</h3>
      <form action="" method="post">
-         {{form.organisation_type}}
+         {{form.organisation_type(class_="radio")}}
          <button type="submit" class="button expand">Next</button>
          {{ form.csrf_token }}
       </form>
