--- a/start_organisation/templates/manage.html
+++ b/start_organisation/templates/manage.html
@@ -32,7 +32,11 @@
 
       <h3>Registered address <a href="#" class="right button tiny">Amend</a></h3>
       <p>
-        Transworld House, 100 City Road, London, EC1Y 2BP
+        {% if organisation.full_address %}
+          <a href="#">{{ organisation.full_address }}</a>
+        {% else %}
+          <a href="#">Transworld House, 100 City Road, London, EC1Y 2BP</a>
+        {% endif %}
       </p>
       <p>
         <a class="button expand" href="{{url_for('licence_apply_type', organisation_id=organisation.uri.split('/')[-1])}}">Apply for a licence</a>
