--- a/start_organisation/templates/start-type.html
+++ b/start_organisation/templates/start-type.html
@@ -5,8 +5,7 @@
     <div class="small-12 columns">
       <ul class="verified-facts">
         <li>
-          <span>&#10003;</span>
-          Bankruptcy check complete
+          Bankruptcy and insolvency register check OK
         </li>
       </ul>
      <h3>Choose a type of organisation</h3>
