--- a/start_organisation/templates/start-done.html
+++ b/start_organisation/templates/start-done.html
@@ -18,7 +18,7 @@
             Your organisation is now visible on the public register and you will
             be able to sign in and manage it.
           </p>
-          <p><a href="{{config.WWW_BASE_URL}}/organisations">Go to Idealgov organisations</a></p>
+          <p><a href="{{config.WWW_BASE_URL}}/organisations">Go to GOV.UK organisations</a></p>
       </div>
 
     </div>
