view and remove todo list items

--- a/start_organisation/templates/todos.html
+++ b/start_organisation/templates/todos.html
@@ -11,7 +11,10 @@
     <div class="small-12 columns">
       <p>
         {% for todo in todos%}
-          <p>{{todo}}</p>
+          <div data-alert class="alert-box success todo" data-org="{{organisation_id}}" id={{todo.uuid}}>
+            Application for: {{ todo.licence_type }} Hearing scheduled for {{todo.hearing_date.strftime('%d/%m/%Y')}} at [location]
+            <a href="#" class="close">x</a>
+          </div>
         {% endfor %}
       </p>
     </div>
