--- a/start_organisation/templates/base_service.html
+++ b/start_organisation/templates/base_service.html
@@ -29,9 +29,9 @@
       </section>
 
         <aside class="left-off-canvas-menu">
-        <h3>About</h3>
+        <h3><a href="{{config.WWW_BASE_URL}}/start">GOV.UK</a></h3>
         <p>
-          The <a href="#">{{service.minister}}</a> is ressponsible for this service and it uses data from
+          The <a href="#">{{service.minister}}</a> is responsible for this service and it uses data from
           {% for register in service.registers %}
             <a href="#">
               {% if loop.last and not loop.first %}
