link to borchester

--- a/start_organisation/templates/todos.html
+++ b/start_organisation/templates/todos.html
@@ -4,19 +4,13 @@
 {% block service_content %}
   <div class="row">
     <div class="small-12 columns">
-      <h2>{{organisation.name}}</h2>
-    </div>
-  </div>
-  <div class="row">
-    <div class="small-12 columns">
-      <p>
+      <ul class="todolist">
         {% for todo in todos%}
-          <div data-alert class="alert-box success todo" data-org="{{organisation_id}}" id={{todo.uuid}}>
-            Application for: {{ todo.licence_type }} Hearing scheduled for {{todo.hearing_date.strftime('%d/%m/%Y')}} at Borchester City Council.
-            <a href="#" class="close">x</a>
-          </div>
+          <li id={{todo.uuid}}>
+            Application for: {{ todo.licence_type }} Hearing scheduled for {{todo.hearing_date.strftime('%d/%m/%Y')}} at <a href="{{config.LOCALGOV_BASE_URL}}">Borchester City Council.
+          </li>
         {% endfor %}
-      </p>
+      </ul>
     </div>
   </div>
 {% endblock %}
