--- a/start_organisation/templates/base_service.html
+++ b/start_organisation/templates/base_service.html
@@ -9,12 +9,12 @@
             </a>
         </section>
         <section class="middle tab-bar-section">
-          <h1 class="title"><a href="/">{% block service_title %}{% endblock%}</a></h1>
+          <h1 class="title">{% block service_title %}{% endblock%}</h1>
         </section>
         <section class="right-small">
           <a class="right-off-canvas-toggle menu-icon" href="#">
             <i class="fa fa-bars"></i>
-            <i class="fa fa-circle {% if todos%}notification{% endif %}"></i>
+            <i class="fa fa-circle {% if unread_todos %}notification{% endif %}"></i>
           </a>
         </section>
       </nav>
@@ -69,7 +69,7 @@
             Notification settings</a>
             </li>
             <li>
-              <a href="{{ url_for('todo_list', organisation_id=organisation_id) }}">{% if todos %}<span class="round alert label">{{todos | length}}</span>{% endif %} To do</a>
+              <a href="{{ url_for('todo_list', organisation_id=organisation_id) }}">{% if unread_todos %}<span class="round alert label">{{unread_todos | length}}</span>{% endif %} To do</a>
             </li>
           </ul>
         </aside>
