--- a/start_organisation/templates/manage.html
+++ b/start_organisation/templates/manage.html
@@ -35,8 +35,16 @@
           <a href="#">Transworld House, 100 City Road, London, EC1Y 2BP</a>
         {% endif %}
       </p>
+
+      <hr/>
+
+      <h3>Apply for a licence</h3>
       <p>
-        <a class="button expand" href="{{url_for('licence_apply_type', organisation_id=organisation.uri.split('/')[-1])}}">Apply for a licence</a>
+        Get a licence for business activities.
+      </p>
+
+      <p>
+        <a class="button expand" href="{{url_for('licence_apply_type', organisation_id=organisation.uri.split('/')[-1])}}">Apply now</a>
       </p>
     </div>
   </div>
