--- a/start_organisation/templates/tax.html
+++ b/start_organisation/templates/tax.html
@@ -10,9 +10,69 @@
   <div class="row">
     <div class="small-12 columns">
       {% include "_tabs.html" %}
+
+      <h3>Add an invoice</h3>
+
       <p>
-        
+      Add an invoice to pay VAT and Corporation Tax immediately.
       </p>
+
+      <p>
+        <a class="button expand" href="#">Add an invoice</a>
+      </p>
+
+      <hr />
+
+      <h3>Previous invoices</h3>
+
+      <table class="table">
+        <thead>
+          <tr>
+          <th>Date</th>
+          <th>Customer</th>
+          <th>Amount</th>
+          <th>Tax paid</th>
+          <th>VAT paid</th>
+          </tr>
+        </thead>
+        <tbody><tr>
+          <td>30 July 2014</td>
+          <td>
+            <a href="#">Fish Dinners Ltd</a>
+          </td>
+          <td>£3,442</td>
+          <td>£847</td>
+          <td>nil</td>
+        </tr>
+        <tr>
+          <td>26 June 2014</td>
+          <td>
+            <a href="#">Fish Dinners Ltd</a>
+          </td>
+          <td>£5,789</td>
+          <td>£1,745</td>
+          <td>nil</td>
+        </tr>
+        <tr>
+          <td>13 May 2014</td>
+          <td>
+            <a href="#">Fish Dinners Ltd</a>
+          </td>
+          <td>£1,800</td>
+          <td>£388</td>
+          <td>nil</td>
+        </tr>
+        <tr>
+          <td>13 May 2014</td>
+          <td>
+            <a href="#">Fish Dinners Ltd</a>
+          </td>
+          <td>£2,789</td>
+          <td>£501</td>
+          <td>nil</td>
+        </tr>
+      </tbody></table>
+
     </div>
   </div>
 {% endblock %}
