--- a/start_organisation/templates/start-done.html
+++ b/start_organisation/templates/start-done.html
@@ -1,10 +1,10 @@
 {% extends "base_transaction.html" %}
-{% block title %}Types of organisation{% endblock%}
+{% block title %}Types of organisation{% endblock %}
 {% block transaction_content %}
   <div class="row">
     <div class="small-12 columns">
 
-      <div id="done-pending" class="done panel">
+      <div id="done-pending" class="done pending panel">
           <h2>Pending</h2>
           <p>
             Your application is pending until the other directors have verified.
@@ -13,7 +13,7 @@
       </div>
 
       <div id="done-done" class="done panel">
-          <h2>&#10003; Done</h2>
+          <h2>Done</h2>
           <p>
             Your organisation is now visible on the public register and you will
             be able to sign in and manage it.
