--- a/start_organisation/templates/licence-apply-type.html
+++ b/start_organisation/templates/licence-apply-type.html
@@ -1,4 +1,4 @@
-{% extends "base_transaction.html" %}
+{% extends "base-transaction.html" %}
 {% block title %}Types of organisation{% endblock %}
 {% block header_title %}<a href="/">Apply for licences</a>{% endblock %}
 {% block transaction_content %}
