--- a/start_organisation/templates/start-taxes.html
+++ b/start_organisation/templates/start-taxes.html
@@ -1,5 +1,5 @@
-{% extends "base_transaction.html" %}
-{% block title %}Types of organisation{% endblock%}
+{% extends "base-transaction.html" %}
+{% block title %}Taxes{% endblock%}
 {% block transaction_content %}
   <div class="row">
     <div class="small-12 columns">
