--- a/start_organisation/templates/licences.html
+++ b/start_organisation/templates/licences.html
@@ -1,4 +1,4 @@
-{% extends "base_service.html" %}
+{% extends "base-service.html" %}
 {% block title %}{{organisation.name}}{% endblock%}
 {% block service_title %} Manage - {{organisation.name}}{% endblock%}
 {% block service_content %}
