--- a/start_organisation/templates/postcode-lookup.html
+++ b/start_organisation/templates/postcode-lookup.html
@@ -1,4 +1,4 @@
-{% extends "base_transaction.html" %}
+{% extends "base-transaction.html" %}
 {% block title %}Organisation postcode{% endblock%}
 {% block transaction_content %}
   <div class="row">
