--- a/start_organisation/templates/start-register.html
+++ b/start_organisation/templates/start-register.html
@@ -1,4 +1,4 @@
-{% extends "base_transaction.html" %}
+{% extends "base-transaction.html" %}
 {% block title %}Types of organisation{% endblock%}
 {% block transaction_content %}
   <div class="row">
