copy and confirmation

--- a/start_organisation/templates/start-details.html
+++ b/start_organisation/templates/start-details.html
@@ -1,5 +1,5 @@
 {% extends "base-transaction.html" %}
-{% block title %}Organisation name{% endblock%}
+{% block title %}Company name{% endblock%}
 {% block transaction_content %}
   <div class="row">
     <div class="small-12 columns">
