--- a/start_organisation/templates/start-register.html
+++ b/start_organisation/templates/start-register.html
@@ -1,5 +1,5 @@
 {% extends "base-transaction.html" %}
-{% block title %}Types of organisation{% endblock%}
+{% block title %}Registrations{% endblock%}
 {% block transaction_content %}
   <div class="row">
     <div class="small-12 columns">
