--- a/start_organisation/templates/start-taxes.html
+++ b/start_organisation/templates/start-taxes.html
@@ -6,14 +6,14 @@
         <h2>Taxes</h2>
         <ul>
           <li>
-            Your organisation will be registered for Corporation tax &nbsp;<small><a href="">Don't do this</a></small>
+            Your company will be registered for Corporation tax &nbsp;<small><a href="">Don't do this</a></small>
           </li>
           <li>
             Directors will automatically be registered for Self Assessment
             &nbsp;<small><a href="">Don't do this</a></small>
           </li>
           <li>
-            Your organisation will automatically be registered for VAT once
+            Your company will automatically be registered for VAT once
             its VAT taxable turnover reaches more than &pound;81,000 &nbsp;<small><a href="">Register now anyway</a></small>
           </li>
         </ul>
