--- a/start_organisation/templates/start-done.html
+++ b/start_organisation/templates/start-done.html
@@ -1,5 +1,5 @@
 {% extends "base-transaction.html" %}
-{% block title %}Organisation submitted{% endblock %}
+{% block title %}Company submitted{% endblock %}
 {% block transaction_content %}
   <div class="row">
     <div class="small-12 columns">
@@ -18,7 +18,7 @@
             Your organisation is now visible on the public register and you will
             be able to sign in and manage it.
           </p>
-          <p><a href="{{config.WWW_BASE_URL}}/organisations">Go to GOV.UK organisations</a></p>
+          <p><a href="{{config.WWW_BASE_URL}}/organisations">Go to GOV.UK companies</a></p>
       </div>
 
     </div>
