--- a/start_organisation/templates/start-review.html
+++ b/start_organisation/templates/start-review.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="small-12 columns">
      <h2>Review details</h2>
-     <div class="panel">
+     <div class="confirmation panel">
        <dl>
          <dt>Company name</dt>
          <dd>{{order.name}}</dd>
