--- a/start_organisation/templates/start-details.html
+++ b/start_organisation/templates/start-details.html
@@ -3,7 +3,7 @@
 {% block transaction_content %}
   <div class="row">
     <div class="small-12 columns">
-     <h2>Organisation details</h2>
+     <h2>Company details</h2>
      <form id="start_details" action="" method="post">
          {{ render_field(form.name) }}
         <p id="ok">
