--- a/start_organisation/templates/start-taxes.html
+++ b/start_organisation/templates/start-taxes.html
@@ -4,17 +4,20 @@
   <div class="row">
     <div class="small-12 columns">
         <h2>Taxes</h2>
+        <p>
+          You will be automatically registered for the following taxes.
+        </p>
         <ul>
           <li>
-            Your company will be registered for Corporation tax &nbsp;<small><a href="">Don't do this</a></small>
+            Your company will be registered for Corporation tax &nbsp;<small class="undo"><a href="">Don't do this</a></small>
           </li>
           <li>
             Directors will automatically be registered for Self Assessment
-            &nbsp;<small><a href="">Don't do this</a></small>
+            &nbsp;<small class="undo"><a href="">Don't do this</a></small>
           </li>
           <li>
             Your company will automatically be registered for VAT once
-            its VAT taxable turnover reaches more than &pound;81,000 &nbsp;<small><a href="">Register now anyway</a></small>
+            its VAT taxable turnover reaches more than &pound;81,000 &nbsp;<small class="undo"><a href="">Register now anyway</a></small>
           </li>
         </ul>
       <form method="post" action="">
