--- a/start_organisation/templates/todos.html
+++ b/start_organisation/templates/todos.html
@@ -4,6 +4,7 @@
 {% block service_content %}
   <div class="row">
     <div class="small-12 columns">
+      <h2>Todo list</h2>
       <ul class="todolist">
         {% for todo in todos%}
           <li id={{todo.uuid}}>
